...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer1"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer2"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer3"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer4"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer5"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer6"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer7"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer8"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer9"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer10"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer11"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:textSize="30sp"
                    android:layout_marginTop="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="10dp" />

                <SeekBar
                    android:id="@+id/spiderAnswer12"
                    style="@style/Widget.AppCompat.SeekBar.Discrete"
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:background="@drawable/input_rounded"
                    android:visibility="visible"
...
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="20dp" />

            </LinearLayout>

            <Button
                android:id="@+id/btnSubmitSpiderData"
                android:layout_width="300dp"
                android:layout_height="60dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="@drawable/btn_rounded"
...
