<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".PersonalEntry">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/PersonalEntryTitle"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:gravity="center"
            android:text="PERSONAL DETAILS"
            android:textColor="#ffffff"
            android:textSize="25sp" />

        <TextView
            android:id="@+id/PersonalEntryDescription"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="ENTER THE FOLLOWING DETAILS:"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/nameEntry"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_rounded"
            android:gravity="center"
            android:hint="NAME"
            android:inputType="text" />

        <EditText
            android:id="@+id/surnameEntry"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@drawable/input_rounded"
            android:gravity="center"
            android:hint="SURNAME"
            android:inputType="text" />

        <EditText
            android:id="@+id/dateEntry"
            android:layout_width="350dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_marginBottom="50dp"
            android:background="@drawable/input_rounded"
            android:gravity="center"
            android:focusableInTouchMode="false"
            android:hint="DATE OF BIRTH (DD/MM/YYYY)"
            android:inputType="text" />

        <Button
            android:id="@+id/btnSubmitPersonalData"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center"
            android:background="@drawable/btn_rounded"
            android:text="SUBMIT"
            android:textColor="@color/buttonText" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>