<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".StartActivity">

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/btn_rounded"
        android:layout_marginTop="50dp"
        android:text="GET STARTED!"
        android:textColor="@color/buttonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PASLogo" />

    <TextView
        android:id="@+id/StartMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_message"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/PASLogo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/PASLogo"
        android:layout_width="0dp"
        android:layout_height="320dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/pas_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher" />

</androidx.constraintlayout.widget.ConstraintLayout>
